k8s/bases/news-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-app
  labels:
    app: news-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-app
  template:
    metadata:
      labels:
        app: news-app
    spec:
      containers:
      - name: news-app
        image: ghcr.io/cobbles/news/news-app
        ports:
        - containerPort: 3000
