k8s/bases/news-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-app
spec:
  selector:
    app: news-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
